# wordviz

./: .gitignore  LICENSE  README.md  pyproject.toml
source/: conf.py  index.rst
src/wordviz/: clustering.py  dim_reduction.py  loading.py  plotting.py  similarity.py
tests/: embedding_100words.txt  test_plotting.py
