[project]
name = "wordviz"
version = "0.1.0"
description = "A lightweight Python package for loading, analyzing, and visualizing word embeddings."
authors = [
    {name = "Elena Zen",email = "elenazen563@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=1.18.5,<2.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "scipy (>=1.7.0,<1.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
